PD00000420-10000111 - Set error message

--- a/puredat-timestamp-many.html
+++ b/puredat-timestamp-many.html
@@ -250,7 +250,7 @@
 					if(!reg.test(value[i])) errors = true;
 					this._formatValue(value[i]);
 				}
-				this.hasErrors = errors;
+				if(errors) this.errorMessage = "Valor inválido";
 				this.set("values",value);
 			}
 		});
